--- a/html/css/index.css
+++ b/html/css/index.css
@@ -51,3 +51,57 @@ body{
     font-size: smaller;
     margin-left: 6px ;
 }
+.cont2{
+    text-align: left;
+    width: 60%;
+    margin-left: 20%;
+    margin-right: 10%;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding: 10px;
+    /* border: 1px black solid; */
+    overflow: hidden;
+}
+.cont2 p{
+    color: gray;
+    padding: 10px;
+}
+.cont2 img{
+    float: left;
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+}
+.cont3{
+    text-align: left;
+    width: 60%;
+    margin-left: 20%;
+    margin-right: 10%;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding: 10px;
+    /* border: 1px black solid; */
+    overflow: hidden;
+
+}
+.cont3 p{
+    color: gray;
+    padding: 10px;
+}
+.cont3 img{
+    float: right;
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+}
+.cont3 h2,h1{
+    color: rgb(3, 49, 136);
+    padding: 10px;
+}
+.cont2 h2,h1{
+    color: rgb(3, 49, 136);
+    padding: 10px;
+}
+.cont2 h1{
+    border: 1px black solid;
+}
