--- a/html/css/index.css
+++ b/html/css/index.css
@@ -35,6 +35,9 @@ body{
     text-align: center;
     padding: 50px;
 }
+.cont1 h1{
+    color: black;
+}
 #buttonlef{
     padding: 10px;
     background-color: red;
@@ -101,7 +104,4 @@ body{
 .cont2 h2,h1{
     color: rgb(3, 49, 136);
     padding: 10px;
-}
-.cont2 h1{
-    border: 1px black solid;
 }
