--- a/html/css/index.css
+++ b/html/css/index.css
@@ -82,7 +82,7 @@ body{
     margin-right: 10%;
     margin-top: 40px;
     margin-bottom: 40px;
-    padding: 10px;
+    padding: 13px;
     /* border: 1px black solid; */
     overflow: hidden;
 
@@ -97,11 +97,44 @@ body{
     height: 200px;
     margin: 10px;
 }
-.cont3 h2,h1{
+#title{
+    color: rgb(3, 49, 136);
+    padding: 10px;
+    background-color: rgb(243, 229, 212);
+    /* border:2px  black solid; */
+    border-top-left-radius: 50%;
+   border-bottom-right-radius: 50%;
+    
+    
+}
+#title2{
     color: rgb(3, 49, 136);
     padding: 10px;
 }
-.cont2 h2,h1{
-    color: rgb(3, 49, 136);
+.cont4{
+    margin: 40px 10% 10px 20%;
     padding: 10px;
+
+}
+.cont4 h4{
+    color:rgb(0, 110, 255);
+    padding: 5px;
+    width: 80%;
+}
+.cont4 h1,h2{
+    color:rgb(0,0,0);
+    padding: 5px;
+}
+.container1{
+background-color: aliceblue;
+padding: 10px;
+width: 20%;
+text-align: center;
+display: inline-block;
+border: 1px black solid;
+
+}
+.container1 img{
+    width: 25%;
+    margin: 10px ;
 }
