--- a/html/css/index.css
+++ b/html/css/index.css
@@ -7,12 +7,19 @@ body{
     width: 100%;
 }
 .head{
+    
     padding: 10px;
+    /* border: 2px black double; */
 
+}
+hr{
+    z-index: 6;
 }
 .riga{
     display: flex;
     float: right;
+    /* border: 2px black double; */
+
 }
 .riga a{
     color: gray;
@@ -30,7 +37,19 @@ body{
 .lefh{
     float: left;
     color: black;
+    /* overflow: hidden; */
+    width: 10%;
+    display: flex;
+    z-index: -1;
+    /* border: 1px black solid; */
+    
 }
+.lefh img{
+    float: left;
+    width: 100px;
+    /* border: 2px black double; */
+}
+
 .cont1{
     text-align: center;
     padding: 50px;
@@ -100,7 +119,7 @@ body{
 #title{
     color: rgb(3, 49, 136);
     padding: 10px;
-    background-color: rgb(243, 229, 212);
+    background:linear-gradient(120deg, rgb(255, 243, 243), gray);
     /* border:2px  black solid; */
     border-top-left-radius: 50%;
    border-bottom-right-radius: 50%;
