--- a/html/css/index.css
+++ b/html/css/index.css
@@ -118,12 +118,16 @@ hr{
 }
 #title{
     color: rgb(3, 49, 136);
-    padding: 10px;
-    background:linear-gradient(120deg, rgb(255, 243, 243), gray);
-    /* border:2px  black solid; */
-    border-top-left-radius: 50%;
-   border-bottom-right-radius: 50%;
-    
+    padding: 15px ;
+    height: 50px;
+    width: 50px;
+    line-height: 50px;
+    margin-top: 40px;
+    margin-left: 30px;
+    background:linear-gradient(120deg, rgb(255, 243, 243),#edede9);
+     /* border:2px  black solid;  */
+     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.267);
+     border-radius: 50% 50% 50% 50% /60% 60% 40% 40%;
     
 }
 #title2{
