--- a/html/css/index.css
+++ b/html/css/index.css
@@ -135,8 +135,9 @@ hr{
     padding: 10px;
 }
 .cont4{
-    margin: 40px 10% 10px 20%;
+    margin: 40px 20% 10px 20%;
     padding: 10px;
+    /* border: 1px black solid; */
 
 }
 .cont4 h4{
@@ -149,15 +150,21 @@ hr{
     padding: 5px;
 }
 .container1{
-background-color: aliceblue;
+/* background-color: aliceblue; */
 padding: 10px;
 width: 20%;
-text-align: center;
+text-align: left;
 display: inline-block;
-border: 1px black solid;
+/* border: 1px black solid; */
+margin: 20px 10px 20px 0px;
+
 
 }
 .container1 img{
     width: 25%;
-    margin: 10px ;
+    margin: 10px 20px 10px 20px ;
+    background-color: aliceblue;
+}
+.container1 p{
+    padding: 5px ;
 }
